--- a/initSettings.json
+++ b/initSettings.json
@@ -4,288 +4,284 @@
   "arcPeriod": 60000,
   "timeStamp": 0,
   "lastArchive": 0,
-  "readings": [
-    {
-      "attr": "linkQuality",
-      "type": "scalar",
-      "value": 62,
-      "unit": "/70",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": 30,
-          "low": 40,
-          "high": 71,
-          "hihi": 80
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "signalLevel",
-      "type": "scalar",
-      "value": -48,
-      "unit": "dBm",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": -70,
-          "low": -60,
-          "high": 0,
-          "hihi": 30
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    }
-  ],
-  "settings": [
-    {
-      "attr": "max-ac-dipole",
-      "type": "scalar",
-      "value": 20,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": 0,
-          "low": 0,
-          "high": 1024,
-          "hihi": 1024
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "max-ac-quad",
-      "type": "scalar",
-      "value": 20,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": 0,
-          "low": 0,
-          "high": 1024,
-          "hihi": 1024
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "offset-dipole",
-      "type": "scalar",
-      "value": 555,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": 0,
-          "low": 0,
-          "high": 1024,
-          "hihi": 1024
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "offset-quad",
-      "type": "scalar",
-      "value": 455,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": 0,
-          "low": 0,
-          "high": 1024,
-          "hihi": 1024
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "on-dipole",
-      "type": "scalar",
-      "value": 1,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": -1,
-          "low": -1,
-          "high": 2,
-          "hihi": 2
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "on-quad",
-      "type": "scalar",
+  "linkQuality": {
+    "action": "reading",
+    "type": "scalar",
+    "value": 62,
+    "unit": "/70",
+    "alarm": {
       "value": 0,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": -1,
-          "low": -1,
-          "high": 2,
-          "hihi": 2
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "sign-dipole",
-      "type": "scalar",
-      "value": 1,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": -2,
-          "low": -2,
-          "high": 2,
-          "hihi": 2
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "sign-quad",
-      "type": "scalar",
-      "value": -1,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": -2,
-          "low": -2,
-          "high": 2,
-          "hihi": 2
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "gain-dipole",
-      "type": "scalar",
-      "value": 2,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": -8,
-          "low": -8,
-          "high": 8,
-          "hihi": 8
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "gain-quad",
-      "type": "scalar",
-      "value": 1,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": -8,
-          "low": -8,
-          "high": 8,
-          "hihi": 8
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "filter-dipole",
-      "type": "scalar",
-      "value": 19,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": 1,
-          "low": 1,
-          "high": 20,
-          "hihi": 20
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
-      }
-    },
-    {
-      "attr": "filter-quad",
-      "type": "scalar",
-      "value": 9,
-      "unit": "unit",
-      "alarm": {
-        "value": 0,
-        "limits": {
-          "lolo": 1,
-          "low": 1,
-          "high": 20,
-          "hihi": 20
-        },
-        "notify": {
-          "name": "",
-          "number": "",
-          "time": 0
-        }
+      "limits": {
+        "lolo": 30,
+        "low": 40,
+        "high": 71,
+        "hihi": 80
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
       }
     }
-  ]
+  },
+  "signalLevel": {
+    "action": "reading",
+    "type": "scalar",
+    "value": -48,
+    "unit": "dBm",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": -70,
+        "low": -60,
+        "high": 0,
+        "hihi": 30
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "maxAcDipole": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 20,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": 0,
+        "low": 0,
+        "high": 1024,
+        "hihi": 1024
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "maxAcQuad": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 20,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": 0,
+        "low": 0,
+        "high": 1024,
+        "hihi": 1024
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "offsetDipole": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 555,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": 0,
+        "low": 0,
+        "high": 1024,
+        "hihi": 1024
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "offsetQuad": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 454,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": 0,
+        "low": 0,
+        "high": 1024,
+        "hihi": 1024
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "onDipole": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 0,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": -1,
+        "low": -1,
+        "high": 2,
+        "hihi": 2
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "onQuad": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 0,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": -1,
+        "low": -1,
+        "high": 2,
+        "hihi": 2
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "signDipole": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 1,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": -2,
+        "low": -2,
+        "high": 2,
+        "hihi": 2
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "signQuad": {
+    "action": "setting",
+    "type": "scalar",
+    "value": -1,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": -2,
+        "low": -2,
+        "high": 2,
+        "hihi": 2
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "gainDipole": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 2,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": -8,
+        "low": -8,
+        "high": 8,
+        "hihi": 8
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "gainQuad": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 1,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": -8,
+        "low": -8,
+        "high": 8,
+        "hihi": 8
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "filterDipole": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 19,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": 1,
+        "low": 1,
+        "high": 20,
+        "hihi": 20
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  },
+  "filterQuad": {
+    "action": "setting",
+    "type": "scalar",
+    "value": 9,
+    "unit": "unit",
+    "alarm": {
+      "value": 0,
+      "limits": {
+        "lolo": 1,
+        "low": 1,
+        "high": 20,
+        "hihi": 20
+      },
+      "notify": {
+        "name": "",
+        "number": "",
+        "time": 0
+      }
+    }
+  }
 }
